--- a/app/src/main/res/layout/authentication_layout.xml
+++ b/app/src/main/res/layout/authentication_layout.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#01090E"
     android:orientation="vertical"
-    tools:context=".AuthenticationActivity">
+    tools:context=".AuthenticationActivity"
+    tools:ignore="VisualLintBounds">
 
 <!--    THIS IS THE LOGO OF THE APPLICATION-->
     <ImageView
@@ -83,7 +84,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/AppName"
             app:layout_constraintVertical_bias="0.175"
-            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
