--- a/app/src/main/res/layout/mainactivity_layout.xml
+++ b/app/src/main/res/layout/mainactivity_layout.xml
@@ -100,22 +100,24 @@
         android:id="@+id/switchCompatRememberMe"
         android:layout_width="321dp"
         android:layout_height="49dp"
+        android:layout_marginTop="32dp"
         android:checked="false"
+        android:clickable="true"
+        android:focusable="true"
         android:text=" Remember me"
         android:textOff="Off"
         android:textOn="On"
         android:textSize="16sp"
         android:theme="@style/FullScreenTheme"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/continueMainButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/underline"
-        app:layout_constraintVertical_bias="0.344"
+        app:layout_constraintVertical_bias="0.22"
         tools:ignore="HardcodedText,VisualLintButtonSize" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/continueMainButton"
         android:layout_width="321dp"
         android:layout_height="73dp"
         android:background="#650DD9"
@@ -137,13 +139,15 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="204dp"
         android:text="Don't have an account?"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/continueMainButton"
+        app:layout_constraintHorizontal_bias="0.5"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -152,6 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="204dp"
         android:clickable="true"
         android:focusable="true"
         android:text="Create one"
@@ -159,10 +164,10 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.015"
+        app:layout_constraintHorizontal_bias="0.009"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/continueMainButton"
+        app:layout_constraintVertical_bias="0.571"
         tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
