--- a/app/src/main/res/layout/fragment_generator.xml
+++ b/app/src/main/res/layout/fragment_generator.xml
@@ -1,16 +1,271 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".GeneratorFragment">
 
     <TextView
+        android:id="@+id/generatorTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Generator Fragment"
-        android:textSize="26sp"
-        android:layout_gravity="center"
+        android:text="Generator"
+        android:textColor="#FFFFFF"
+        android:gravity="center_vertical"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
         tools:ignore="HardcodedText" />
 
-</FrameLayout>
+    <View
+        android:id="@+id/delimitingLine"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="15dp"
+        android:background="#FFFFFF"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/passwordText"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:text="" />
+
+        <ImageButton
+            android:id="@+id/copyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:contentDescription="button to copy the password"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/copy"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck,RedundantDescriptionCheck" />
+
+        <ImageButton
+            android:id="@+id/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:contentDescription="button to refresh the password"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/refresh"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck,RedundantDescriptionCheck" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:id="@+id/passwordLength"
+            android:layout_width="85dp"
+            android:layout_height="35dp"
+            android:gravity="center_vertical"
+            android:text=" Length: "
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TextSizeCheck" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:min="8"
+            android:progress="12"
+            android:max="32"
+            style="@style/MySeekBar"
+            android:layout_weight="1"
+            tools:targetApi="o" />
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchUpperCase"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:checked="false"
+            android:text=" Uppercase (A-Z)"
+            android:textStyle="bold"
+            android:textOff="Off"
+            android:textOn="On"
+            android:textSize="16sp"
+            android:clickable="true"
+            android:focusable="true"
+            android:theme="@style/FullScreenTheme"
+            android:gravity="center_vertical"
+            tools:ignore="HardcodedText,VisualLintButtonSize" />
+
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchLowerCase"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:checked="false"
+        android:clickable="true"
+        android:focusable="true"
+        android:text=" Lowercase (a-z)"
+        android:textOff="Off"
+        android:textOn="On"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:theme="@style/FullScreenTheme"
+        android:gravity="center_vertical"
+        tools:ignore="HardcodedText,VisualLintButtonSize" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchNumbers"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:checked="false"
+        android:clickable="true"
+        android:focusable="true"
+        android:text=" Numbers (1-9)"
+        android:textOff="Off"
+        android:textOn="On"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:theme="@style/FullScreenTheme"
+        android:gravity="center_vertical"
+        tools:ignore="HardcodedText,VisualLintButtonSize" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchSymbols"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:checked="false"
+        android:clickable="true"
+        android:focusable="true"
+        android:text=" Symbols (^%!@)"
+        android:textOff="Off"
+        android:textOn="On"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:theme="@style/FullScreenTheme"
+        android:gravity="center_vertical"
+        tools:ignore="HardcodedText,VisualLintButtonSize" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/minimumNumbers"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text=" Minimum Numbers:"
+            android:gravity="center_vertical"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:layout_marginEnd="35dp"
+            android:layout_weight="2"
+            tools:ignore="HardcodedText" />
+        <TextView
+            android:id="@+id/numberText"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="1"
+            android:gravity="center_vertical"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_weight="0"
+            android:layout_marginEnd="5dp"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/minusNumbers"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="2"
+            android:background="@color/SwitchOn"
+            android:text=" - "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
+
+        <Button
+            android:id="@+id/plusNumbers"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="2"
+            android:background="@color/SwitchOn"
+            android:text=" + "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text=" Minimum Symbols: "
+            android:gravity="center_vertical"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:layout_marginEnd="35dp"
+            android:layout_weight="2"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/symbolText"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="0"
+            android:gravity="center_vertical"
+            android:text="1"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/minusSymbols"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="2"
+            android:background="@color/SwitchOn"
+            android:text=" - "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck" />
+
+        <Button
+            android:id="@+id/plusSymbols"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="2"
+            android:background="@color/SwitchOn"
+            android:text=" + "
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck" />
+    </LinearLayout>
+
+</LinearLayout>
