--- a/app/src/main/res/layout/fragment_vault.xml
+++ b/app/src/main/res/layout/fragment_vault.xml
@@ -1,16 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VaultFragment">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    tools:context=".GeneratorFragment">
 
     <TextView
+        android:id="@+id/generatorTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vault Fragment"
-        android:textSize="26sp"
-        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:text="Vault"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         tools:ignore="HardcodedText" />
 
-</FrameLayout>
+    <View
+        android:id="@+id/delimitingLine"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="15dp"
+        android:background="#FFFFFF"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="328dp"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/searchItem"
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_weight="2"
+                android:gravity="center_vertical"
+                android:text=""
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+
+            <View
+                android:id="@+id/textUnderline"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="34dp"
+                android:background="#FFFFFF"
+                app:layout_constraintHorizontal_bias="0.0" />
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="button to search for an element"
+            android:src="@drawable/search"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck,RedundantDescriptionCheck" />
+
+        <ImageButton
+            android:id="@+id/addButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:contentDescription="button to add element to vault"
+            android:src="@drawable/add"
+            tools:ignore="HardcodedText,TouchTargetSizeCheck,RedundantDescriptionCheck" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </LinearLayout>
+
+</LinearLayout>
