--- a/app/src/main/res/layout/fragment_vault.xml
+++ b/app/src/main/res/layout/fragment_vault.xml
@@ -27,41 +27,29 @@
         android:background="#FFFFFF"
         app:layout_constraintHorizontal_bias="0.0" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:gravity="center_vertical">
 
-        <LinearLayout
-            android:layout_width="328dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/searchItem"
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:layout_weight="2"
-                android:gravity="center_vertical"
-                android:text=""
-                android:textColor="#FFFFFF"
-                android:textSize="16sp" />
-
-            <View
-                android:id="@+id/textUnderline"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="34dp"
-                android:background="#FFFFFF"
-                app:layout_constraintHorizontal_bias="0.0" />
-
-        </LinearLayout>
+        <EditText
+            android:id="@+id/searchItem"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toStartOf="@+id/addButton"
+            android:gravity="center_vertical"
+            android:text=""
+            android:inputType="text"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            tools:ignore="LabelFor" />
 
         <ImageButton
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="5dp"
             android:background="@android:color/transparent"
             android:contentDescription="button to search for an element"
@@ -72,12 +60,20 @@
             android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/searchButton"
             android:background="@android:color/transparent"
             android:contentDescription="button to add element to vault"
             android:src="@drawable/add"
             tools:ignore="HardcodedText,TouchTargetSizeCheck,RedundantDescriptionCheck" />
 
-    </LinearLayout>
+        <!-- Add an invisible view to align the buttons to the right -->
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignParentEnd="true"
+            android:visibility="invisible" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
