--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,12 @@
         android:id="@+id/vaultFragment"
         android:name="com.example.ironvault.VaultFragment"
         android:label="fragment_vault"
-        tools:layout="@layout/fragment_vault" />
+        tools:layout="@layout/fragment_vault" >
+
+        <argument
+            android:name="credentials"
+            app:argType="android.os.Bundle"/>
+    </fragment>
 
     <fragment
         android:id="@+id/generatorFragment"
