--- a/app/src/main/res/layout/authentication_layout.xml
+++ b/app/src/main/res/layout/authentication_layout.xml
@@ -135,9 +135,7 @@
         app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/masterPasswordUnderline"
-        app:layout_constraintVertical_bias="0.163"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="@color/SwitchOff">
+        app:layout_constraintVertical_bias="0.163">
 
         <EditText
             android:id="@+id/passwordHint"
@@ -149,7 +147,7 @@
             android:ems="10"
             android:focusable="false"
             android:importantForAutofill="no"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:textAlignment="textStart"
             android:textColor="#D9D9D9"
             app:layout_constraintBottom_toTopOf="@+id/button"
