--- a/app/src/main/res/layout/mainactivity_layout.xml
+++ b/app/src/main/res/layout/mainactivity_layout.xml
@@ -129,25 +129,24 @@
         android:typeface="sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.648"
+        app:layout_constraintVertical_bias="0.628"
         tools:ignore="HardcodedText,VisualLintButtonSize" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="204dp"
         android:text="Don't have an account?"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/continueMainButton"
         app:layout_constraintTop_toBottomOf="@+id/continueMainButton"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintVertical_bias="0.586"
         tools:ignore="HardcodedText" />
 
     <TextView
