Finished the Scanner for password using the HaveIbeenPwned API, with some small refactoring

--- a/app/src/main/res/layout/create_account_layout.xml
+++ b/app/src/main/res/layout/create_account_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create your account"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,7 +35,7 @@
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textAlignment="textStart"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Email address"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/emailAddress"
         app:layout_constraintStart_toStartOf="@+id/emailAddress"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Master Password"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutMasterPass"
         app:layout_constraintStart_toStartOf="@+id/TextInputLayoutMasterPass"
@@ -101,7 +101,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:textAlignment="textStart"
-            android:textColor="#D9D9D9"
+            android:textColor="@color/WhiteishTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailAddress"
@@ -125,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Re-Type Master Password"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutReTypeMasterPass"
         app:layout_constraintStart_toStartOf="@+id/TextInputLayoutReTypeMasterPass"
@@ -153,7 +153,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:textAlignment="textStart"
-            android:textColor="#D9D9D9"
+            android:textColor="@color/WhiteishTextColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/underlineMasterPassword"
@@ -178,7 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Master Password Hint (Optional)"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/MasterPasswordHint"
         app:layout_constraintStart_toStartOf="@+id/MasterPasswordHint"
@@ -206,6 +206,7 @@
         android:textOff="Off"
         android:textOn="On"
         android:textSize="16sp"
+        android:textColor="@color/WhiteishTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -224,7 +225,7 @@
         android:importantForAutofill="no"
         android:inputType="text"
         android:textAlignment="textStart"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -240,7 +241,7 @@
         android:background="#650DD9"
         android:text="Continue"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="34sp"
         android:textStyle="bold"
         android:typeface="sans"
