--- a/app/src/main/res/layout/mainactivity_layout.xml
+++ b/app/src/main/res/layout/mainactivity_layout.xml
@@ -46,7 +46,7 @@
         android:text="IRON VAULT"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,7 +59,7 @@
         android:layout_marginTop="52dp"
         android:layout_marginBottom="8dp"
         android:text="Email address"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textAlignment="textStart"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AppName"
@@ -108,6 +108,7 @@
         android:textOff="Off"
         android:textOn="On"
         android:textSize="16sp"
+        android:textColor="@color/WhiteishTextColor"
         android:theme="@style/FullScreenTheme"
         app:layout_constraintBottom_toTopOf="@+id/continueMainButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,10 +121,10 @@
         android:id="@+id/continueMainButton"
         android:layout_width="321dp"
         android:layout_height="73dp"
-        android:background="#650DD9"
+        android:background="@color/SwitchOn"
         android:text="Continue"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="34sp"
         android:textStyle="bold"
         android:typeface="sans"
@@ -143,6 +144,7 @@
         android:layout_marginBottom="204dp"
         android:text="Don't have an account?"
         android:textSize="16sp"
+        android:textColor="@color/WhiteishTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/continueMainButton"
         app:layout_constraintTop_toBottomOf="@+id/continueMainButton"
