--- a/app/src/main/res/layout/authentication_layout.xml
+++ b/app/src/main/res/layout/authentication_layout.xml
@@ -33,7 +33,7 @@
         android:text="IRON VAULT"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Master Password"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutMasterPassword"
         app:layout_constraintStart_toStartOf="@+id/textInputLayoutMasterPassword"
@@ -77,7 +77,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:textAlignment="textStart"
-            android:textColor="#D9D9D9"
+            android:textColor="@color/WhiteishTextColor"
             app:layout_constraintBottom_toTopOf="@+id/masterPasswordUnderline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.351"
@@ -106,7 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Password Hint"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPasswordHint"
         app:layout_constraintStart_toStartOf="@+id/textInputLayoutPasswordHint"
@@ -149,7 +149,7 @@
             android:importantForAutofill="no"
             android:inputType="text"
             android:textAlignment="textStart"
-            android:textColor="#D9D9D9"
+            android:textColor="@color/WhiteishTextColor"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +166,7 @@
         android:background="#650DD9"
         android:text="Log in"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#D9D9D9"
+        android:textColor="@color/WhiteishTextColor"
         android:textSize="34sp"
         android:textStyle="bold"
         android:typeface="sans"
