--- a/app/src/main/res/layout/fragment_generator.xml
+++ b/app/src/main/res/layout/fragment_generator.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:text="Generator"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/WhiteishTextColor"
         android:textStyle="bold"
         tools:ignore="HardcodedText" />
 
@@ -43,7 +43,7 @@
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:text=""
-            android:textColor="#FFFFFF"
+            android:textColor="@color/WhiteishTextColor"
             android:textSize="16sp" />
 
         <ImageButton
@@ -80,7 +80,7 @@
             android:layout_height="35dp"
             android:gravity="center_vertical"
             android:text=" Length: "
-            android:textColor="#FFFFFF"
+            android:textColor="@color/WhiteishTextColor"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText,TextSizeCheck" />
@@ -183,7 +183,7 @@
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:text=" Minimum Numbers:"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/WhiteishTextColor"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
@@ -195,7 +195,7 @@
             android:layout_weight="0"
             android:gravity="center_vertical"
             android:text="1"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/WhiteishTextColor"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
@@ -237,7 +237,7 @@
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:text=" Minimum Symbols: "
-            android:textColor="#FFFFFF"
+            android:textColor="@color/WhiteishTextColor"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
@@ -249,7 +249,7 @@
             android:layout_weight="0"
             android:gravity="center_vertical"
             android:text="1"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/WhiteishTextColor"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
